quiz functional with display of correct / incorrect answers a,nd score

--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@ body{
     background-color: rgb(250, 245, 232);
 }
 
+.align-center{
+    text-align: center;
+
+}
+
 h1{
     text-align: center;
     padding: 2vh 0 5vh 0;
-    color: black;
+    color: rgba(0, 13, 84, 0.845);
     font-size: 42px;
     text-decoration: underline;
 }
@@ -17,6 +22,7 @@ h2{
     padding: 0 0 2vh 0;
     margin: 0;
 }
+
 .question-div{
     border: 4px solid black;
     margin-bottom: 32px;
@@ -32,13 +38,25 @@ h2{
 }
 
 .submit-button{
-    display: block;
     margin: 0 auto;
-    background-color: #FFFF;
+    background-color: rgba(0, 13, 84, 0.845);
+    color:white;
     border-radius: 5px;
     padding: 8px 16px;
     font-size: 22px;
     cursor: pointer;
+}
+
+.results-div{
+    border-radius: 5px;
+    background-color: rgba(0, 13, 84, 0.845);
+    color: white;
+    width: 60vw;
+    margin: 2vh auto;
+    padding: 2vh 2vw;
+    box-shadow:0px 2px 5px black;
+    text-align: center;
+    font-size: 24px;
 }
 
 .submit-button:hover{
@@ -47,4 +65,12 @@ h2{
 }
 .question-div label, .question-div input [type="radio"]{
     cursor: pointer;
+}
+
+.display-block{
+    display: block;
+}
+
+.display-none{
+    display: none;
 }
